Fixing a navbar font color issue when browsing on a smaller screen Also stopped the navbar from overlapping the page on a smaller screen

--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -47,12 +47,15 @@
 }
 @media (max-width: 767px){
 	.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-		color: #e5bd17;
+		color: #fff;
 	}
+	.navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: #e5bd17;
+    }
 }
 
 body {
-  padding-top: 96px;
+  padding-top: 0px;
   padding-bottom: 30px;
 }
 	@media (min-width: 768px) and (max-width: 1020px){
